Revert "fix: rounded-full search input on iOS attempt"
This reverts commit e9941a1baa263b4d4c407a13f229e892f58d1e21.

--- a/theme-src/src/theme-custom.css
+++ b/theme-src/src/theme-custom.css
@@ -2,7 +2,7 @@
  * such as paragraphs, headings, links, etc. */
 
 /* remove rounded corners on webkit browsers */
-form, input[type=search] {
+input[type=search] {
   -webkit-appearance: none;
 }
 
